--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -6,6 +6,7 @@ do.jar=true
 endorsed.javafx.ant.classpath=.
 javac.debug=true
 javadoc.preview=true
+javafx.run.as=standalone
 javafx.run.inbrowser=<Browser Default do Sistema>
-javafx.run.inbrowser.path=C:\\Program Files\\Internet Explorer\\iexplore.exe
-user.properties.file=C:\\Users\\glerison\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
+javafx.run.inbrowser.path=C:\\Program Files (x86)\\Mozilla Firefox\\firefox.exe
+user.properties.file=C:\\Users\\glerisonlima\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
