--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,8 @@ dist.jar=${dist.dir}/DigitaCupomFx.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.commons-lang3-3.3.2.jar=src/lib/commons-lang3-3.3.2.jar
+file.reference.jaybird-full-2.2.10.jar=src/lib/jaybird-full-2.2.10.jar
 file.reference.jfoenix.jar=src/lib/jfoenix.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
@@ -36,7 +38,9 @@ jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
-    ${file.reference.jfoenix.jar}
+    ${file.reference.jfoenix.jar}:\
+    ${file.reference.commons-lang3-3.3.2.jar}:\
+    ${file.reference.jaybird-full-2.2.10.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
