--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -4,6 +4,10 @@ do.depend=false
 do.jar=true
 # N\u00e3o h\u00e1 necessidade de se alterar essa propriedade, a menos que se esteja personalizando a infraestrutura da tarefa Ant do JavaFX
 endorsed.javafx.ant.classpath=.
+file.reference.commons-lang3-3.3.2.jar=C:\\Users\\glerisonlima\\Desktop\\DigitaCupomFX\\lib\\commons-lang3-3.3.2.jar
+file.reference.controlsfx-8.20.9.jar=C:\\Users\\glerisonlima\\Desktop\\DigitaCupomFX\\lib\\controlsfx-8.20.9.jar
+file.reference.jaybird-full-2.2.10.jar=C:\\Users\\glerisonlima\\Desktop\\DigitaCupomFX\\lib\\jaybird-full-2.2.10.jar
+file.reference.jfoenix.jar=C:\\Users\\glerisonlima\\Desktop\\DigitaCupomFX\\lib\\jfoenix.jar
 javac.debug=true
 javadoc.preview=true
 javafx.run.as=standalone
